--- a/src-test-unit/Makefile
+++ b/src-test-unit/Makefile
@@ -10,7 +10,7 @@ OUTPUT=$(BUILD)/test-unit
 SRCS=$(wildcard $(SRC)/*.cpp) $(wildcard $(SRC)/**/*.java)
 OBJS=$(SRCS:$(SRC)/%=$(BUILD)/%.o)
 
-CFLAGS += -fPIC -W -Wall -Wextra -Wno-unused-parameter -I../src -I../include
+CFLAGS += -fPIC -W -O3 -Wall -Wextra -Wno-unused-parameter -I../src -I../include
 
 .PHONY: all
 
@@ -22,10 +22,8 @@ $(OUTPUT): $(OBJS)
 
 $(BUILD)/%.java.o: $(SRC)/%.java
 	javac -d $(BUILD)/ $<
-	cd $(BUILD) ; \
-	xxd -i $(SRC)/$*.class $(BUILD)/$*.c
+	cd $(BUILD) ; xxd -i $*.class $*.c
 	$(LINK.c) -c -o $@ $(BUILD)/$*.c
 
 $(BUILD)/%.cpp.o: $(SRC)/%.cpp $(INCS) $(HPPS) | $(BUILD)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
-
