--- a/src-test-unit/Makefile
+++ b/src-test-unit/Makefile
@@ -4,10 +4,9 @@ BUILD=../build
 
 HPPS=$(wildcard $(INCLUDE)/*.hpp)
 
-SRC=.
 OUTPUT=$(BUILD)/test-unit
-SRCS=$(wildcard $(INCLUDE)/*.cpp) $(wildcard $(SRC)/*.cpp) $(wildcard $(SRC)/**/*.java)
-OBJS=$(SRCS:$(SRC)/%=$(BUILD)/%.o)
+SRCS=$(wildcard *.cpp) $(wildcard jnif/*.java)
+OBJS=$(SRCS:%=$(BUILD)/%.o)
 
 CFLAGS += -fPIC -W -O3 -Wall -Wextra -Wno-unused-variable -Wno-unused-parameter -I../src -I../include
 
@@ -17,15 +16,12 @@ all: $(OUTPUT)
 	$(OUTPUT)
 
 $(OUTPUT): $(OBJS)	
-	clang++ $(CFLAGS) -stdlib=libc++ -o $@ $^
+	clang++ $(CFLAGS) -stdlib=libc++ -o $@ $^ ../build/libjnif.a
 
-$(BUILD)/%.java.o: $(SRC)/%.java
+$(BUILD)/%.java.o: %.java
 	javac -d $(BUILD)/ $<
 	cd $(BUILD) ; xxd -i $*.class $*.c
 	$(LINK.c) -c -o $@ $(BUILD)/$*.c
 
-$(BUILD)/%.cpp.o: $(SRC)/%.cpp $(INCS) $(HPPS) | $(BUILD)
-	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
-
-$(BUILD)/%.cpp.o: $(INCLUDE)/%.cpp $(INCS) $(HPPS) | $(BUILD)
+$(BUILD)/%.cpp.o: %.cpp $(HPPS) | $(BUILD)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
