--- a/src/Makefile
+++ b/src/Makefile
@@ -11,10 +11,9 @@ CFLAGS += -fPIC -W -O3 -Wall -Wextra -Wno-unused-variable -Wno-unused-parameter
 .PHONY: all clean
 
 all: $(OUTPUT)
-	$(OUTPUT)
 
-$(OUTPUT): $(OBJS)	
-	clang++ $(CFLAGS) -stdlib=libc++ -o $@ $^
+$(OUTPUT): $(OBJS)
+	ar crv $@ $^
 
 $(BUILD)/%.cpp.o: %.cpp $(INCS) | $(BUILD)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
