Fixed tableswitch and lookupswitch due to use of BaseWriter.

--- a/src-test-agent/Makefile
+++ b/src-test-agent/Makefile
@@ -7,14 +7,12 @@ INCLUDE=../src
 BUILD=../build
 
 INCS=$(wildcard $(INCLUDE)/*.h)
-HPPS=$(wildcard $(INCLUDE)/**/*.hpp) $(wildcard $(INCLUDE)/**/parser/*.hpp)
 
-SRC=.
 OUTPUTNAME=libfrheapagent.jnilib
-SRCS=$(wildcard $(SRC)/*.c) $(wildcard $(SRC)/*.cpp) $(wildcard $(SRC)/*/*.java)
-OBJS=$(SRCS:$(SRC)/%=$(BUILD)/%.o) 
+SRCS=$(wildcard *.c) $(wildcard *.cpp) $(wildcard */*.java)
+OBJS=$(SRCS:%=$(BUILD)/%.o) 
 OUTPUT=$(BUILD)/$(OUTPUTNAME)
-CFLAGS += -fPIC -W -Wall -Wextra -O3 -Wno-unused-parameter -lpthread -shared -I$(JAVA_HOME)/include -I../src -I../include
+CFLAGS += -fPIC -W -Wall -Wextra -O3 -Wno-unused-parameter -lpthread -shared -I$(JAVA_HOME)/include
 
 .PHONY: all
 
@@ -30,10 +28,10 @@ $(BUILD)/java-test/frheapagent/HeapTest.class: ../java-test/frheapagent/HeapTest
 	mkdir -p $(BUILD)/java-test
 	javac ../java-test/frheapagent/HeapTest.java -d $(BUILD)/java-test
 
-$(OUTPUT): $(OBJS)
-	clang++ $(CFLAGS) -stdlib=libc++ -o $@ $^
+$(OUTPUT): $(OBJS) $(BUILD)/libjnif.a
+	clang++ $(CFLAGS) -lstdc++ -stdlib=libc++ -o $@ $^
 
-$(BUILD)/%.java.o: $(SRC)/%.java
+$(BUILD)/%.java.o: %.java
 	$(JAVAC) -d $(BUILD)/ $<
 	cd $(BUILD) ; xxd -i $*.class $*.c
 	$(LINK.c) -c -o $@ $(BUILD)/$*.c
@@ -41,5 +39,8 @@ $(BUILD)/%.java.o: $(SRC)/%.java
 $(BUILD)/%.c.o: %.c $(INCS)
 	$(LINK.c) -c -o $@ $<
 
-$(BUILD)/%.cpp.o: %.cpp $(INCS) $(HPPS)
-	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
+$(BUILD)/%.cpp.o: %.cpp $(INCS)
+	$(LINK.c) -std=c++11 -stdlib=libc++ -I../src -c -o $@ $<
+
+$(BUILD)/libjnif.a:
+	$(MAKE) -C ../src
