- New instruction list version.

--- a/src-test-agent/Makefile
+++ b/src-test-agent/Makefile
@@ -7,19 +7,21 @@ INCLUDE=../src
 BUILD=../build
 
 INCS=$(wildcard $(INCLUDE)/*.h)
+HPPS=$(wildcard $(INCLUDE)/*.hpp)
 
-OUTPUTNAME=libfrheapagent.jnilib
+LIB=libfrheapagent.jnilib
 SRCS=$(wildcard *.c) $(wildcard *.cpp) $(wildcard */*.java)
-OBJS=$(SRCS:%=$(BUILD)/%.o) 
-OUTPUT=$(BUILD)/$(OUTPUTNAME)
+OBJS=$(SRCS:%=$(BUILD)/%.o)
 CFLAGS += -fPIC -W -Wall -Wextra -O3 -Wno-unused-parameter -lpthread -shared -I$(JAVA_HOME)/include
 
-.PHONY: all
+.PHONY: all run
 
 #$(LIB) $(BUILD)/frproxy/FrInstrProxy.class
 
-all: $(BUILD)/java-test/frheapagent/HeapTest.class $(OUTPUT)
-	java $(JVMARGS) -agentpath:$(OUTPUT)=$(BUILD) -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest
+all: $(BUILD)/java-test/frheapagent/HeapTest.class $(BUILD)/$(LIB)
+
+run: $(BUILD)/java-test/frheapagent/HeapTest.class $(BUILD)/$(LIB)
+	java $(JVMARGS) -agentpath:$(BUILD)/$(LIB)=$(BUILD) -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
 
 #$(BUILD)/frproxy/FrInstrProxy.class: resources/frproxy/FrInstrProxy.java
 #	javac -d build/ resources/frproxy/FrInstrProxy.java
@@ -28,7 +30,7 @@ $(BUILD)/java-test/frheapagent/HeapTest.class: ../java-test/frheapagent/HeapTest
 	mkdir -p $(BUILD)/java-test
 	javac ../java-test/frheapagent/HeapTest.java -d $(BUILD)/java-test
 
-$(OUTPUT): $(OBJS) $(BUILD)/libjnif.a
+$(BUILD)/$(LIB): $(OBJS) $(BUILD)/libjnif.a
 	clang++ $(CFLAGS) -lstdc++ -stdlib=libc++ -o $@ $^
 
 $(BUILD)/%.java.o: %.java
@@ -39,7 +41,7 @@ $(BUILD)/%.java.o: %.java
 $(BUILD)/%.c.o: %.c $(INCS)
 	$(LINK.c) -c -o $@ $<
 
-$(BUILD)/%.cpp.o: %.cpp $(INCS)
+$(BUILD)/%.cpp.o: %.cpp $(INCS) $(HPPS)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -I../src -c -o $@ $<
 
 $(BUILD)/libjnif.a:
