Using frproxy taken from inside agent and using define class.

--- a/src-test-agent/Makefile
+++ b/src-test-agent/Makefile
@@ -10,36 +10,34 @@ INCS=$(wildcard *.h)
 HPPS=$(wildcard $(INCLUDE)/*.hpp)
 
 LIB=libfrheapagent.jnilib
-SRCS=$(wildcard *.c) $(wildcard *.cpp) $(wildcard */*.java)
+SRCS=$(wildcard *.c) $(wildcard *.cpp) $(wildcard frproxy/*.java)
 OBJS=$(SRCS:%=$(BUILD)/%.o)
-CFLAGS += -fPIC -W -Wall -Wextra -O3 -Wno-unused-parameter -lpthread -shared -I$(JAVA_HOME)/include
+CFLAGS= -W -Wall -Wextra -O3 -Wno-unused-parameter -I$(JAVA_HOME)/include
+MAINCLASS=frheapagent.HeapTest
+MAINCLASSFILE=$(subst .,/,$(MAINCLASS)).class
+MAINJAVAFILE=$(subst .,/,$(MAINCLASS)).java
 
 .PHONY: all run
 
-#$(LIB) $(BUILD)/frproxy/FrInstrProxy.class
-
-all: $(BUILD)/java-test/frheapagent/HeapTest.class $(BUILD)/$(LIB)
+all: $(BUILD)/$(MAINCLASSFILE) $(BUILD)/$(LIB)
 
 runall:
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=Empty -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=Dump -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=Print -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=Print -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=Identity -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	cd $(BUILD) ; java $(JVMARGS) -agentpath:$(LIB)=ObjectInit -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
-	
-run: $(BUILD)/java-test/frheapagent/HeapTest.class $(BUILD)/$(LIB)
-	cd $(BUILD) ; time java $(JVMARGS) -agentpath:$(LIB)=NewArray -Xbootclasspath/a:$(BUILD) -cp $(BUILD)/java-test frheapagent.HeapTest > $(BUILD)/$(LIB).out
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=Empty $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=Dump $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=Print $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=Identity $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=ObjectInit $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=NewArray $(MAINCLASS)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=Main $(MAINCLASS)
 
-#$(BUILD)/frproxy/FrInstrProxy.class: resources/frproxy/FrInstrProxy.java
-#	javac -d build/ resources/frproxy/FrInstrProxy.java
+run: $(BUILD)/$(MAINCLASSFILE) $(BUILD)/$(LIB)
+	cd $(BUILD) && time java $(JVMARGS) -agentpath:$(LIB)=NewArray $(MAINCLASS)
 
-$(BUILD)/java-test/frheapagent/HeapTest.class: ../java-test/frheapagent/HeapTest.java
-	mkdir -p $(BUILD)/java-test
-	javac ../java-test/frheapagent/HeapTest.java -d $(BUILD)/java-test
+$(BUILD)/$(MAINCLASSFILE): $(MAINJAVAFILE)
+	javac $^ -d $(BUILD)
 
 $(BUILD)/$(LIB): $(OBJS) $(BUILD)/libjnif.a
-	clang++ $(CFLAGS) -lstdc++ -stdlib=libc++ -o $@ $^
+	clang++ -fPIC -lpthread -shared -lstdc++ -stdlib=libc++ -o $@ $^
 
 $(BUILD)/%.java.o: %.java
 	$(JAVAC) -d $(BUILD)/ $<
@@ -47,7 +45,7 @@ $(BUILD)/%.java.o: %.java
 	$(LINK.c) -c -o $@ $(BUILD)/$*.c
 
 $(BUILD)/%.c.o: %.c $(INCS)
-	$(LINK.c) -c -o $@ $<
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(BUILD)/%.cpp.o: %.cpp $(INCS) $(HPPS)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -I../src -c -o $@ $<
