Added support for wide instructions (iinc and iload, istore, etc…).

--- a/src-test-unit/Makefile
+++ b/src-test-unit/Makefile
@@ -17,7 +17,7 @@ run: $(BUILD)/$(EXE)
 	$(BUILD)/$(EXE) > $(BUILD)/$(EXE).out
 
 $(BUILD)/$(EXE): $(OBJS) $(BUILD)/libjnif.a
-	clang++ $(CFLAGS) -stdlib=libc++ -o $@ $^
+	clang++ $(CFLAGS) -fsanitize=leak -stdlib=libc++ -o $@ $^
 
 $(BUILD)/%.class.o: %.class
 	mkdir -p $(@D) ; cp $< $(@D)
