--- a/Makefile.local
+++ b/Makefile.local
@@ -1,21 +1,8 @@
 
-# Mac OS X
-JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_21.jdk/Contents/Home
 JAVA=java
+#JVMARGS=-Xverify:all -Xprof -Xdiag -Xcheck:jni -Xfuture -XX:+PrintCompilation -verbose:class1 -verbose:gc -verbose:jni
 JVMARGS=-Xverify:all
 JAVAC=javac
 
-#JOPT="-Xint -Xms$XMS -Xmx$XMX"
-# -verbose:class|gc|jni
-#JDEBUG=-Xcheck:jni -Xdiag -verbose:jni
-
-#EVENTSPERSAMPLE=500
-#XMS=2048m
-#XMX=2048m
-#JOPT="-Xint -Xms$XMS -Xmx$XMX"
-# -verbose:class|gc|jni
-#JDEBUG=-Xcheck:jni -Xdiag -verbose:jni
-#java $JOPT -Xverify:none -agentpath:$AGENT=$EVENTSPERSAMPLE -Xbootclasspath/a:$PROXYBCP -cp $CP "$MAINCLASS"
-#java -Xverify:none -agentpath:$AGENT=5000 -Xbootclasspath/a:$PROXYBCP -jar lib/dacapo-9.12-bach.jar avrora
-#java -Xverify:none $JDEBUG $JOPT -agentpath:$AGENT=5000 -Xbootclasspath/a:$PROXYBCP -jar scala-benchmark-suite-0.1.0-20120216.103539-3.jar -t 1 -s tiny actors
-#java -Xverify:none $JDEBUG $JOPT -agentpath:$AGENT=5000 -Xbootclasspath/a:$PROXYBCP -jar scala-benchmark-suite-0.1.0-20120216.103539-3.jar avrora
+# Mac OS X
+JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_21.jdk/Contents/Home
