--- a/src-test-unit/Makefile
+++ b/src-test-unit/Makefile
@@ -4,7 +4,7 @@ BUILD=../build
 
 EXE=test-unit
 HPPS=$(wildcard $(INCLUDE)/*.hpp)
-SRCS=$(wildcard *.cpp) $(wildcard jnif/*.java) $(wildcard classes/*.class)
+SRCS=$(wildcard jnif/*.java) $(wildcard *.cpp)
 OBJS=$(SRCS:%=$(BUILD)/%.o)
 
 CFLAGS += -fPIC -W -O0 -Wall -Wextra -I$(INCLUDE)
@@ -19,15 +19,23 @@ run: $(BUILD)/$(EXE)
 $(BUILD)/$(EXE): $(OBJS) $(BUILD)/libjnif.a
 	clang++ $(CFLAGS) -fsanitize=leak -stdlib=libc++ -o $@ $^
 
-$(BUILD)/%.class.o: %.class
-	mkdir -p $(@D) ; cp $< $(@D)
-	cd $(BUILD) ; xxd -i $*.class $*.c
-	$(LINK.c) -c -o $@ $(BUILD)/$*.c
+#$(BUILD)/%.class.o: %.class
+#	mkdir -p $(@D) ; cp $< $(@D)
+#	cd $(BUILD) ; xxd -i $*.class $*.c
+#	$(LINK.c) -c -o $@ $(BUILD)/$*.c
 
 $(BUILD)/%.java.o: %.java
 	javac -d $(BUILD)/ $<
-	cd $(BUILD) ; xxd -i $*.class $*.c
+	cd $(BUILD) ; xxd -include $*.class $*.c
 	$(LINK.c) -c -o $@ $(BUILD)/$*.c
+#	echo "// AUTOMATICALLY GENERATED; DO NOT MODIFY" > $(BUILD)/$*.h
+#	echo "extern u1 $(subst /,_,$*)_class[];" >> $(BUILD)/$*.h
+#	echo "extern int $(subst /,_,$*)_class_len;" >> $(BUILD)/$*.h
+
+#$(BUILD)/filelist.cpp:
+#$(foreach dir,$(dirs),$(wildcard $(dir)/*))
+#$(BUILD)/filelist.cpp.o: $(BUILD)/filelist.cpp | $(BUILD)
+#	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
 
 $(BUILD)/%.cpp.o: %.cpp $(HPPS) | $(BUILD)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
