--- a/Makefile.local
+++ b/Makefile.local
@@ -1,7 +1,8 @@
 
 JAVA=java
 #JVMARGS=-Xverify:all -Xprof -Xdiag -Xcheck:jni -Xfuture -XX:+PrintCompilation -verbose:class1 -verbose:gc -verbose:jni
-JVMARGS=-Xverify:all
+JVMARGS=-Xverify:all 
+#-Xcheck:jni -verbose:jni
 JAVAC=javac
 
 # Mac OS X
