Progress and some refactor.
Former-commit-id: 59edf4c738e0d085ae7ee75c8e4b21607e790ea2

--- a/eval/Makefile
+++ b/eval/Makefile
@@ -2,32 +2,31 @@
 BUILD=../build
 BENCHS=avrora batik eclipse fop h2 jython luindex lusearch pmd sunflow tomcat tradebeans tradesoap xalan
 
-INSTRS=Empty Dump Print Identity ObjectInit NewArray ANewArray Main ClientServer
+INSTRS=Print Identity ObjectInit NewArray ANewArray Main ClientServer
 
 LIB=libfrheapagent.jnilib
 
-INSTR=ComputeApp
+INSTR=Compute
 #INSTR=Heap
 #INSTR=ANewArray
 #INSTR=Print
 #INSTR=Identity
-#INSTR=Empty
 RUNDACAPO=cd $(BUILD)/ && java -agentpath:$(LIB)=$(INSTR) -jar ../eval/dacapo-9.12-bach.jar
-
 RUNSCALA=java -Xverify:all -agentpath:$(LIB)=$(INSTR) -jar ../eval/scala-benchmark-suite-0.1.0-20120216.103539-3.jar
 
 #RUNSCALA=java -Xverify:all -jar scala-benchmark-suite-0.1.0-20120216.103539-3.jar
 
 dargs=avrora
 
-.PHONY: run all scala show clean
-
+.PHONY: run
 run: $(BUILD)/$(LIB)
 	$(RUNDACAPO) $(dargs)
 
+.PHONY: all
 all: $(LIB)
 	$(foreach b,$(shell $(RUNDACAPO) -l),$(RUNDACAPO) $(b) &&) :
 
+.PHONY: scala
 scala: $(LIB)
 	$(RUNSCALA) actors
 
@@ -36,8 +35,10 @@ $(BUILD)/$(LIB):
 
 #cp ../jnif/build/$(LIB) .
 
+.PHONY: show
 show:
 	$(RUNDACAPO) -l
 
+.PHONY: clean
 clean:
 	rm -rf tlog.*.log hs_err_pid*.log *.disasm scratch/
