--- a/eval/Makefile
+++ b/eval/Makefile
@@ -12,7 +12,7 @@ INSTR=Compute
 #INSTR=ANewArray
 #INSTR=Print
 #INSTR=Identity
-RUNDACAPO=cd $(BUILD)/ && time java -agentpath:$(LIB)=$(INSTR) -jar ../eval/dacapo-9.12-bach.jar
+RUNDACAPO=cd $(BUILD)/ && time java  -agentpath:$(LIB)=$(INSTR) -jar ../eval/dacapo-9.12-bach.jar
 RUNSCALA=java -Xverify:all -agentpath:$(LIB)=$(INSTR) -jar ../eval/scala-benchmark-suite-0.1.0-20120216.103539-3.jar
 
 #RUNSCALA=java -Xverify:all -jar scala-benchmark-suite-0.1.0-20120216.103539-3.jar
@@ -35,6 +35,46 @@ dacapo-eclipse: dacapo
 dacapo-fop: BENCH=fop
 dacapo-fop: dacapo
 
+.PHONY: dacapo-h2
+dacapo-h2: BENCH=h2
+dacapo-h2: dacapo
+
+.PHONY: dacapo-jython
+dacapo-jython: BENCH=jython
+dacapo-jython: dacapo
+
+.PHONY: dacapo-luindex
+dacapo-luindex: BENCH=luindex
+dacapo-luindex: dacapo
+
+.PHONY: dacapo-lusearch
+dacapo-lusearch: BENCH=lusearch
+dacapo-lusearch: dacapo
+
+.PHONY: dacapo-pmd
+dacapo-pmd: BENCH=pmd
+dacapo-pmd: dacapo
+
+.PHONY: dacapo-sunflow
+dacapo-sunflow: BENCH=sunflow
+dacapo-sunflow: dacapo
+
+.PHONY: dacapo-tomcat
+dacapo-tomcat: BENCH=tomcat
+dacapo-tomcat: dacapo
+
+.PHONY: dacapo-tradebeans
+dacapo-tradebeans: BENCH=tradebeans
+dacapo-tradebeans: dacapo
+
+.PHONY: dacapo-tradesoap
+dacapo-tradesoap: BENCH=tradesoap
+dacapo-tradesoap: dacapo
+
+.PHONY: dacapo-xalan
+dacapo-xalan: BENCH=xalan
+dacapo-xalan: dacapo
+
 .PHONY: dacapo
 dacapo: $(BUILD)/$(LIB)
 	$(RUNDACAPO) $(BENCH)
@@ -48,8 +88,10 @@ all: $(BUILD)/$(LIB)
 scala: $(LIB)
 	$(RUNSCALA) actors
 
-$(BUILD)/$(LIB):
+$(BUILD)/$(LIB): force
 	$(MAKE) -C ../src-test-agent
+
+.PHONY: force
 
 #cp ../jnif/build/$(LIB) .
 
